@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/arch/Attic/alpha.py,v 1.3 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/arch/Attic/alpha.py,v 1.4 2006/01/03 14:55:11 wolf31o2 Exp $
 
 import builder,os
 from catalyst_support import *
@@ -11,7 +11,7 @@ class generic_alpha(builder.generic):
 		builder.generic.__init__(self,myspec)
 		self.settings["mainarch"]="alpha"
 		self.settings["CHROOT"]="chroot"
-		self.settings["CFLAGS"]="-mieee"
+		self.settings["CFLAGS"]="-mieee -pipe"
 
 class arch_alpha(generic_alpha):
 	"builder class for generic alpha (ev4+)"
